--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
     <title>Booki</title>
@@ -89,7 +89,7 @@
             </div>
             <div class="bouton">
               <button class="disabled-filter" type="button">
-                <i class="fa fa-dog"></i><span>Animaux autorisés</span>
+                <i class="fa fa-solid fa-fire"></i><span>Nos pépites</span>
               </button>
             </div>
           </div>
@@ -111,7 +111,7 @@
               <a class="link" href="#">
                 <div class="image-card-marseille">
                   <img
-                    src="./images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+                    src="./images/hebergements/marcus-loke.jpg"
                     alt="Auberge La Canebière"
                     title="Auberge La Cannebière"
                     class="hebergements-photos"
@@ -136,7 +136,7 @@
               <a class="link" href="#">
                 <div class="image-card-marseille">
                   <img
-                    src="./images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
+                    src="./images/hebergements/fred-kleber.jpg"
                     alt="Hôtel du Port"
                     title="Hôtel du Port"
                     class="hebergements-photos"
@@ -161,7 +161,7 @@
               <a class="link" href="#">
                 <div class="image-card-marseille">
                   <img
-                    src="./images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
+                    src="./images/hebergements/reisetopia.jpg"
                     alt="Hôtel Les mouettes"
                     title="Hôtel Les mouettes"
                     class="hebergements-photos"
@@ -186,7 +186,7 @@
               <a class="link" href="#">
                 <div class="image-card-marseille">
                   <img
-                    src="./images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
+                    src="./images/hebergements/annie-spratt.jpg"
                     alt="Hôtel de la mer"
                     title="Hôtel de la mer"
                     class="hebergements-photos"
@@ -211,7 +211,7 @@
               <a class="link" href="#">
                 <div class="image-card-marseille">
                   <img
-                    src="./images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
+                    src="./images/hebergements/nicate-lee.jpg"
                     alt="Auberge Le Panier"
                     title="Auberge Le Panier"
                     class="hebergements-photos"
@@ -236,7 +236,7 @@
               <a class="link" href="#">
                 <div class="image-card-marseille">
                   <img
-                    src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
+                    src="./images/hebergements/febrian-zakaria.jpg"
                     alt="Hôtel Chez Amina"
                     title="Hôtel Chez Amina"
                     class="hebergements-photos"
@@ -273,7 +273,7 @@
               <a class="link" href="#">
                 <div class="image-card-pop">
                   <img
-                    src="./images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+                    src="./images/hebergements/emile-guillemot.jpg"
                     alt="Hôtel Le soleil du matin"
                     title="Hôtel Le soleil du matin"
                     class="populaires-photos"
@@ -298,7 +298,7 @@
               <a class="link" href="#">
                 <div class="image-card-pop">
                   <img
-                    src="./images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
+                    src="./images/hebergements/aw-creative.jpg"
                     alt="Chambres d'Hôtes Au cœur de l'eau"
                     title="Chambres d'Hôtes Au cœur de l'eau"
                     class="populaires-photos"
@@ -323,7 +323,7 @@
               <a class="link" href="#">
                 <div class="image-card-pop">
                   <img
-                    src="./images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
+                    src="./images/hebergements/febrian-zakaria2.jpg"
                     alt="Hôtel Bleu et Blanc"
                     title="Hôtel Bleu et Blanc"
                     class="populaires-photos"
@@ -358,7 +358,7 @@
               <a class="link" href="#">
                 <div class="image-card-act">
                   <img
-                    src="./images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
+                    src="./images/activites/reno-laithienne.jpg"
                     alt="Vieux-Port"
                     title="Vieux-Port"
                     class="activites-photos"
@@ -375,7 +375,7 @@
               <a class="link" href="#">
                 <div class="image-card-act">
                   <img
-                    src="./images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
+                    src="./images/activites/paul-hermann.jpg"
                     alt="Fort de Pomègues"
                     title="Fort de Pomègues"
                     class="activites-photos"
@@ -392,7 +392,7 @@
               <a class="link" href="#">
                 <div class="image-card-act">
                   <img
-                    src="./images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
+                    src="./images/activites/kilyan-sockalingum.jpg"
                     alt="Parc national des Calanques"
                     title="Parc national des Calanques"
                     class="activites-photos"
@@ -409,7 +409,7 @@
               <a class="link" href="#">
                 <div class="image-card-act">
                   <img
-                    src="./images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg"
+                    src="./images/activites/florian-wehde.jpg"
                     alt="PNotre-Dame-de-la-Garde"
                     title="Notre-Dame-de-la-Garde"
                     class="activites-photos"
