--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
           />
         </a>
 
-        <nav id="ancre" class="ancre">
+        <nav id="anchor" class="anchor">
           <ul class="menu">
-            <li class="menu-list active">
-              <a href="#section_offre">Hébergements</a>
+            <li class="menu-list">
+              <a href="#section-offre">Hébergements</a>
             </li>
             <li class="menu-list">
-              <a href="#section_activites">Activités</a>
+              <a href="#section-activites">Activités</a>
             </li>
           </ul>
         </nav>
@@ -48,21 +48,21 @@
       </div>
 
       <div>
-        <form class="searchform" action="#">
-          <button class="locbutton" type="button">
+        <form class="search-form" action="#">
+          <button class="loc-button" type="button">
             <i class="fa fa-map-marker-alt"></i>
           </button>
           <input
-            class="searchbar"
+            class="search-bar"
             type="text"
             placeholder="Marseille, France"
-            name="searchbar"
+            name="search-bar"
           />
-          <button class="searchbutton" type="submit">
+          <button class="search-button" type="submit">
             <i class="rechercher">Rechercher</i>
             <i class="fa-solid fa-magnifying-glass"></i>
           </button>
-          <button class="searchbutton-mob" type="submit">
+          <button class="search-button-mob" type="submit">
             <i class="fa fa-search"></i>
           </button>
         </form>
@@ -71,22 +71,22 @@
       <div class="filters-container">
         <h2>Filtres</h2>
         <div class="filters">
-          <div class="bouton">
+          <div class="button">
             <button class="disabled-filter" type="button">
               <i class="fa fa-money-bill-wave"></i><span>Économique</span>
             </button>
           </div>
-          <div class="bouton">
+          <div class="button">
             <button class="disabled-filter" type="button">
               <i class="fa fa-child"></i><span>Familial</span>
             </button>
           </div>
-          <div class="bouton">
+          <div class="button">
             <button class="disabled-filter" type="button">
               <i class="fa fa-heart"></i><span>Romantique</span>
             </button>
           </div>
-          <div class="bouton">
+          <div class="button">
             <button class="disabled-filter" type="button">
               <i class="fa fa-solid fa-fire"></i><span>Nos pépites</span>
             </button>
@@ -100,10 +100,10 @@
       </div>
     </header>
 
-    <main class="mainsection">
-      <div class="section_offre" id="section_offre">
+    <main class="main-section">
+      <div class="section-offre" id="section-offre">
         <div class="titre-section">
-          <h2 class="titre_hebergements">Hébergements à Marseille</h2>
+          <h2 class="titre-hebergements">Hébergements à Marseille</h2>
         </div>
         <div class="list-cards-hebergements">
           <div class="card-marseille">
@@ -262,9 +262,9 @@
         </div>
       </div>
 
-      <div class="section_pop">
+      <div class="section-pop">
         <div class="titre-section">
-          <h2 class="titre_pop">Les plus populaires</h2>
+          <h2 class="titre-pop">Les plus populaires</h2>
           <i class="fa-solid fa-chart-line"></i>
         </div>
         <div class="list-cards-pop">
@@ -347,10 +347,10 @@
       </div>
     </main>
 
-    <section class="activites" id="section_activites">
-      <div class="section_activites">
+    <section class="activites" id="section-activites">
+      <div class="section-activites">
         <div class="titre-section-act">
-          <h2 class="titre_activites">Activités à Marseille</h2>
+          <h2 class="titre-activites">Activités à Marseille</h2>
         </div>
         <div class="list-cards-activites">
           <div class="card-act">
