Réorganisation de l'ordre des hôtels; Push final

--- a/index.html
+++ b/index.html
@@ -107,31 +107,7 @@
         </div>
         <div class="list-cards-hebergements">
           <div class="card-marseille">
-            <a class="link" href="#">
-              <div class="image-card-marseille">
-                <img
-                  src="./images/hebergements/marcus-loke.jpg"
-                  alt="Auberge La Canebière"
-                  title="Auberge La Cannebière"
-                  class="hebergements-photos"
-                />
-              </div>
-              <div class="text-container-heb">
-                <div class="titre-container-heb">
-                  <h4>Auberge La Canebière</h4>
-                  <p>Nuit à partir de 25€</p>
-                </div>
-                <div class="stars-marseille">
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star greystar"></i>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="card-marseille">
+            <!--Hôtel du port 1-->
             <a class="link" href="#">
               <div class="image-card-marseille">
                 <img
@@ -157,6 +133,33 @@
             </a>
           </div>
           <div class="card-marseille">
+            <!--Hôtel Chez Amina 2-->
+            <a class="link" href="#">
+              <div class="image-card-marseille">
+                <img
+                  src="./images/hebergements/febrian-zakaria.jpg"
+                  alt="Hôtel Chez Amina"
+                  title="Hôtel Chez Amina"
+                  class="hebergements-photos"
+                />
+              </div>
+              <div class="text-container-heb">
+                <div class="titre-container-heb">
+                  <h4>Hôtel Chez Amina</h4>
+                  <p>Nuit à partir de 96€</p>
+                </div>
+                <div class="stars-marseille">
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star greystar"></i>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="card-marseille">
+            <!--Hôtel Les mouettes 3-->
             <a class="link" href="#">
               <div class="image-card-marseille">
                 <img
@@ -182,6 +185,7 @@
             </a>
           </div>
           <div class="card-marseille">
+            <!--Hôtel de la mer 4-->
             <a class="link" href="#">
               <div class="image-card-marseille">
                 <img
@@ -207,6 +211,33 @@
             </a>
           </div>
           <div class="card-marseille">
+            <!--Auberge La Canebière 5-->
+            <a class="link" href="#">
+              <div class="image-card-marseille">
+                <img
+                  src="./images/hebergements/marcus-loke.jpg"
+                  alt="Auberge La Canebière"
+                  title="Auberge La Cannebière"
+                  class="hebergements-photos"
+                />
+              </div>
+              <div class="text-container-heb">
+                <div class="titre-container-heb">
+                  <h4>Auberge La Canebière</h4>
+                  <p>Nuit à partir de 25€</p>
+                </div>
+                <div class="stars-marseille">
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star greystar"></i>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="card-marseille">
+            <!--Auberge Le Panier 6-->
             <a class="link" href="#">
               <div class="image-card-marseille">
                 <img
@@ -220,31 +251,6 @@
                 <div class="titre-container-heb">
                   <h4>Auberge Le Panier</h4>
                   <p>Nuit à partir de 23€</p>
-                </div>
-                <div class="stars-marseille">
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star greystar"></i>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="card-marseille">
-            <a class="link" href="#">
-              <div class="image-card-marseille">
-                <img
-                  src="./images/hebergements/febrian-zakaria.jpg"
-                  alt="Hôtel Chez Amina"
-                  title="Hôtel Chez Amina"
-                  class="hebergements-photos"
-                />
-              </div>
-              <div class="text-container-heb">
-                <div class="titre-container-heb">
-                  <h4>Hôtel Chez Amina</h4>
-                  <p>Nuit à partir de 96€</p>
                 </div>
                 <div class="stars-marseille">
                   <i class="fa-solid fa-star"></i>
